<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tablero"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.isbit.m.Tablero">

    <RelativeLayout
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/num_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_step_1"
            android:textColor="@color/instructions_num"
            android:textSize="@dimen/font_size_instructions_num"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/heading_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/description_step_1"
            android:layout_alignBaseline="@+id/num_step_1"
            android:layout_toRightOf="@+id/num_step_1"
            android:layout_toEndOf="@+id/num_step_1"
            android:textColor="@color/instructions_heading"
            android:text="@string/heading_step_1"
            android:textSize="@dimen/font_size_instructions_header"
            />
        <TextView
            android:id="@+id/description_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/num_step_1"
            android:text="@string/description_step_1"
            android:textColor="@color/instructions_desc"
            android:textSize="@dimen/font_size_instructions_desc" />


        <TextView
            android:id="@+id/num_step_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_step_2"
            android:layout_below="@+id/description_step_1"
            android:textColor="@color/instructions_num"
            android:textSize="@dimen/font_size_instructions_num"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/heading_step_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/description_step_2"
            android:layout_alignBaseline="@+id/num_step_2"
            android:layout_toRightOf="@+id/num_step_1"
            android:layout_toEndOf="@+id/num_step_1"
            android:textColor="@color/instructions_heading"
            android:text="@string/heading_step_2"
            android:textSize="@dimen/font_size_instructions_header"
            />
        <TextView
            android:id="@+id/description_step_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/num_step_2"
            android:text="@string/description_step_2"
            android:textColor="@color/instructions_desc"
            android:textSize="@dimen/font_size_instructions_desc" />

        <TextView
            android:id="@+id/num_step_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_step_3"
            android:layout_below="@+id/description_step_2"
            android:textColor="@color/instructions_num"
            android:textSize="@dimen/font_size_instructions_num"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/heading_step_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/description_step_3"
            android:layout_alignBaseline="@+id/num_step_3"
            android:layout_toRightOf="@+id/num_step_2"
            android:layout_toEndOf="@+id/num_step_2"
            android:textColor="@color/instructions_heading"
            android:text="@string/heading_step_3"
            android:textSize="@dimen/font_size_instructions_header"
            />
        <TextView
            android:id="@+id/description_step_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/num_step_3"
            android:text="@string/description_step_3"
            android:textColor="@color/instructions_desc"
            android:textSize="@dimen/font_size_instructions_desc" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"

        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
       android:layout_below="@+id/instructions"
        />

    <Button
        android:id="@+id/button_acceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="20sp"
        android:textColor="@color/button_scan_token_qr"
        android:text="@string/escanear_qr_para_ingresar" />


</RelativeLayout>
